--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="regexPhone">^[0-9]{10}$</string>
+    <string name="checkin_time">Checkin time:</string>
+    <string name="checkout_time">Checkout time:</string>
 </resources>
